front-end now compiles and add api to check if email / username are unique

--- a/front-end/reddit-clone/src/app/header/header.component.html
+++ b/front-end/reddit-clone/src/app/header/header.component.html
@@ -4,7 +4,7 @@
     <mat-form-field class="plr-24 search-bar"  >
         <mat-label style="font-size: 16px;">Search</mat-label>
         <input matInput type="text" >
-        <button mat-button matSuffix mat-icon-button aria-label="Clear" (click)="value=''">
+        <button mat-button matSuffix mat-icon-button aria-label="Clear">
           <mat-icon>close</mat-icon>
         </button>
     </mat-form-field>
