add signup validation to front and back

--- a/front-end/reddit-clone/src/app/sign-up/account-creation/account-creation.component.html
+++ b/front-end/reddit-clone/src/app/sign-up/account-creation/account-creation.component.html
@@ -5,25 +5,27 @@
         <p>
         <mat-form-field appearance="outline" class="pb-12">
           <mat-label>CHOOSE A USERNAME</mat-label>
-          <input matInput placeholder="Placeholder" [formControlName]="'username'">
+          <input matInput  [formControlName]="'username'">
           <!--<mat-icon matSuffix>done_outline</mat-icon> -->
-          <mat-error *ngIf="!signUpFormGroup.get('username').valid && signUpFormGroup.get('username').touched" >USERNAME (MIN = 8, MAX = 20)</mat-error>
+          <mat-error *ngIf="signUpFormGroup.get('username').errors && ( signUpFormGroup.get('username').errors.minlength || signUpFormGroup.get('username').errors.maxlength ) && signUpFormGroup.get('username').touched" >USERNAME (MIN = 8, MAX = 20)</mat-error>
+          <mat-error *ngIf="signUpFormGroup.get('username').errors && signUpFormGroup.get('username').errors.usernameExistsError && signUpFormGroup.get('username').touched" >USERNAME IS IN USE</mat-error> 
+          <mat-error matTooltip="VALID EXAMPLES: Username1 OR user_name1" *ngIf="signUpFormGroup.get('username').errors && signUpFormGroup.get('username').errors.pattern && signUpFormGroup.get('username').touched" >INCORRECT FORMAT</mat-error>    
+   
         </mat-form-field>
+        
       </p>
       <p>
         <mat-form-field appearance="outline">
           <mat-label>PASSWORD</mat-label>
-          <input  type="password" matInput placeholder="Placeholder" [formControlName]="'password'" (keyup)="onChangePassword()">
+          <input  type="password" matInput  [formControlName]="'password'" (keyup)="onChangePassword()">
           <mat-error *ngIf="signUpFormGroup.get('password').errors && (signUpFormGroup.get('password').errors.minlength || signUpFormGroup.get('password').errors.maxlength) && signUpFormGroup.get('password').touched" >PASSWORD (MIN = 8, MAX = 20)</mat-error>
-          
-          <!--<mat-icon matSuffix>done_outline</mat-icon> -->
         </mat-form-field>
       </p>
 
       <p>
         <mat-form-field appearance="outline">
           <mat-label>RETYPE PASSWORD</mat-label>
-          <input type="password" matInput placeholder="Placeholder" [formControlName]="'retypePassword'">
+          <input type="password" matInput  [formControlName]="'retypePassword'">
           <!--<mat-icon matSuffix>done_outline</mat-icon> -->
           <mat-error *ngIf="signUpFormGroup.get('retypePassword').errors && (signUpFormGroup.get('retypePassword').errors.minlength || signUpFormGroup.get('retypePassword').errors.maxlength) && signUpFormGroup.get('retypePassword').touched" >PASSWORD (MIN = 8, MAX = 20) </mat-error>
           <mat-error *ngIf="signUpFormGroup.get('retypePassword').errors && signUpFormGroup.get('retypePassword').errors.passwordEqualityError && signUpFormGroup.get('retypePassword').touched" >PASSWORDS DO NOT MATCH</mat-error>
@@ -33,8 +35,10 @@
       <div style="width: 100%;">     
         <mat-dialog-actions >
         <button mat-button style="margin-right: auto;" (click)="onBack()">Back</button>
-        <button mat-raised-button color="primary" cdkFocusInitial style="margin-left: auto;" [disabled]="!signUpFormGroup.valid" (click)="onSignUp()">SIGN UP</button>
-      </mat-dialog-actions>
-    </div>
+        <button style="height: 36px; width: 100px; margin-left: auto;" mat-raised-button color="primary" (click)="onSignUp()" [disabled]="signUpFormGroup.invalid || signUpFormGroup.pending"><span *ngIf="!signUpFormGroup.pending ">SIGN UP</span>
+          <mat-spinner style="margin:auto;"  *ngIf="signUpFormGroup.pending" diameter="15" mode="indeterminate"></mat-spinner>
+        </button>
+        </mat-dialog-actions>
+      </div>
     </form>
     
